src/objects/ACCL__Promotion_Template__c.object
<CustomObject>
    <description>Template for the creation of a promotion.</description>
    <fields>
        <fullName>ACCL__Active_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if a promotion of this template is initially active or if a tactic of this type is initially pre-set as included in the promotion (not considered if the tactic is manually added to the promotion!)</description>
        <label>Active Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is the template active.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Anchor_Type__c</fullName>
        <description>Specifies the anchor type of the promotion.</description>
        <label>Anchor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomerSet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Calculation_Mode__c</fullName>
        <label>Calculation Mode</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AdHoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Writeback</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Consider_Listing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls, whether all products of active listings are considered when bringing back the products that are part of the promoted cluster or product group according to the specified listing finding template.</description>
        <label>Consider Listing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Creation_Platform__c</fullName>
        <description>Indicates, on which platform this template can be used for new creation of promotions.</description>
        <label>Creation Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <description>Holds the description of language 1.</description>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <description>Holds the description of language 2.</description>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <description>Holds the description of language 3.</description>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
   <!-- <fields>
        <fullName>ACCL__Description__c</fullName>
        <description>Description of language.</description>
        <formula>CASE
          (
          $User.ACCL__Language_Postfix__c,
          &quot;Language1&quot;, ACCL__Description_Language_1__c,
          &quot;Language2&quot;, ACCL__Description_Language_2__c,
          &quot;Language3&quot;, ACCL__Description_Language_3__c,
          &quot;Language4&quot;, ACCL__Description_Language_4__c,
          ACCL__Description_Language_1__c
          )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>-->
    <fields>
        <fullName>ACCL__Display_In_call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The promotion will be displayed in a call if, at the call date, the promotion is valid for the business partner of the call.</description>
        <label>Display In call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__KPI_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calculation Configuration</label>
        <referenceTo>ACCL__KPI_Set__c</referenceTo>
        <relationshipLabel>Promotion Templates</relationshipLabel>
        <relationshipName>Promotion_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Mobility_Color__c</fullName>
        <description>Color used for displaying the promotion.</description>
        <label>Mobility Color</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Promotion_Type__c</fullName>
        <label>Promotion Type</label>
        <picklist>
            <picklistValues>
                <fullName>Promotion</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SellablePromotion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <globalPicklist>ACCL__Sales_Org</globalPicklist>
        <label>Sales Org</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Sort__c</fullName>
        <description>Sort number.</description>
        <label>Sort</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Trade_Calendar_Color__c</fullName>
        <description>Specifies the color of the promotion in Trade Calendar.</description>
        <label>Trade Calendar Color</label>
        <picklist>
            <picklistValues>
                <fullName>0x002266</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0x003344</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0x008899</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0x00aa99</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>0x224433</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0x2f539c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0x337722</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0x359b4c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0x408fcd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0x551155</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0x993399</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0xaa1133</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0xbbbb00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0xdd4411</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0xeeaa00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0xFf9900</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Trade_Calendar_Relevant__c</fullName>
        <label>Trade Calendar Relevant</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calculate_In_store_Dates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check the validation rules.</description>
        <label>Validate for In store Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ext_KPI_SetName__c</fullName>
        <description>helpfield for Improt a data</description>
        <externalId>true</externalId>
        <label>Ext KPI SetName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_Promotion_Template__c</fullName>
        <description>Helpfield for import of data</description>
        <externalId>true</externalId>
        <label>Ext Promotion Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_Recordtype__c</fullName>
        <description>helpfield needed to import a data</description>
        <externalId>true</externalId>
        <label>Ext_Recordtype</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_Approval_Process_Identifier__c</fullName>
        <description>Approval Process Identifier</description>
        <label>Approval Process Identifier</label>
        <picklist>
            <picklistValues>
                <fullName>AccountSpecificWorkflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ParentBandedPackWorkflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ParentWorkflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ChildWorkflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ParentPastDatedUrgentWorkflow</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UL_Calculate_Promotion_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculate Promotion Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UL_Calculate_Slogan_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculate Slogan Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UL_Calculate_for_Max_Min_Dates__c</fullName>
        <description>This field is used to calculate the max and min dates on promotion</description>
        <label>Calculate for Max/Min Days</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UL_Promo_Type_ControlView__c</fullName>
        <description>Attribute to control the visibility to end user</description>
        <inlineHelpText>Attribute to control the visibility to end user</inlineHelpText>
        <label>Sharing Type</label>
        <picklist>
            <picklistValues>
                <fullName>CustomerEvent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MarketingEvent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SpecialHoliday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Dated/Urgent</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UL_Promotion_Template_Type__c</fullName>
        <label>Promotion Template Type</label>
        <picklist>
            <picklistValues>
                <fullName>Short-Term</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>LTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Event</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UL_Validate_for_Max_Min_Dates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for validating the Max and min dates.</description>
        <label>Validate for Max/Min Dates</label>
        <type>Checkbox</type>
    </fields>
    <label>Promotion Template</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Sort__c</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UL_Promo_Type_ControlView__c</columns>
        <columns>ACCL__Promotion_Type__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <columns>ACCL__Anchor_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Sales_Org__c</field>
            <operation>equals</operation>
            <value>UK SO,Ireland SO,AR01</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Sort__c</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UL_Promo_Type_ControlView__c</columns>
        <columns>ACCL__Promotion_Type__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <columns>ACCL__Anchor_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Sales_Org__c</field>
            <operation>equals</operation>
            <value>AR01</value>
        </filters>
        <label>AR01</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Promotion Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Templates</pluralLabel>
    <recordTypes>
        <fullName>ACCL__Event</fullName>
        <active>true</active>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__Promotion</fullName>
        <active>true</active>
        <label>Promotion</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ACCL__AnchorType_CalculationMode_Combination</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(ACCL__Anchor_Type__c, &apos;CustomerSet&apos;) &amp;&amp; ISPICKVAL(ACCL__Calculation_Mode__c, &apos;Writeback&apos;))</errorConditionFormula>
        <errorDisplayField>ACCL__Calculation_Mode__c</errorDisplayField>
        <errorMessage>The selected Calculation Mode is not valid in combination with CustomerSet-Promotions</errorMessage>
    </validationRules>
    <!--<validationRules>
        <fullName>ACCL__Prevent_Name_Duplication</fullName>
        <active>true</active>
        <errorConditionFormula>and(
Name = VLOOKUP
($ObjectType.ACCL__Promotion_Template__c.Fields.Name , $ObjectType.ACCL__Promotion_Template__c.Fields.Name, Name ),

not(
Id=VLOOKUP
($ObjectType.ACCL__Promotion_Template__c.Fields.Id , $ObjectType.ACCL__Promotion_Template__c.Fields.Name, Name )))
</errorConditionFormula>
        <errorMessage>Promotion Template Name already exists, please enter different Name.</errorMessage>
    </validationRules>-->
    <!---->
</CustomObject>